shimlang/test_scripts/errors/int_list_fail.stderr
 1 | int([]);
     ^^^^^^^
Error: Cannot convert List(Word(u24([0, 0, 44]))) to int
